[assets] fix margin on icons, fix user dropdown not showing on wide mobile

--- a/assets/css/supervisr.css
+++ b/assets/css/supervisr.css
@@ -160,11 +160,13 @@ header.header form.active {
 }
 
 h1 > clr-icon {
+    margin-left: 8px;
     margin-bottom: 8px;
     margin-right: 8px;
 }
 
 h2 > clr-icon {
+    margin-left: 8px;
     margin-bottom: 4px;
     margin-right: 8px;
 }
